--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,13 @@
     <string name="userTitleRegister">Title</string>
     <string name="userDescriptionRegister">Description</string>
     <string name="deletedEvent">Delete</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="btnEdit">Edit</string>
+    <string name="BtnMap">Map</string>
+    <string name="btnShare">Share</string>
+    <string name="capture_photo">Capture photo</string>
+    <string name="see_album">Recents photos</string>
+    <string name="about">About</string>
+    <string name="see_more">See more</string>
 
 </resources>
