--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,7 @@
     <string name="see_album">Recents photos</string>
     <string name="about">About</string>
     <string name="see_more">See more</string>
+    <string name="telDev">11965886824</string>
+    <string name="telDevLabel">call me</string>
 
 </resources>
